MDEV-31030 Assertion `!error' failed in ha_partition::update_row on UPDATE

Removing wrong assertion as division by zero was caused by valid
input.